<resources>
    <string name="app_name">BugManagerMobile</string>
    <string name="login_title">缺陷管理</string>
    <string name="login_username">账号</string>
    <string name="login_password">密码</string>
    <string name="login_btn">登录</string>
    <string name="login_remember">记住我</string>
    <string name="login_forget"><u>忘记密码?</u></string>
    <string name="login_user_name_pattern">只能输入中文、英文、数字字符、下划线</string>
    <string name="login_parse_failure">解析失败！</string>
    <string name="login_failure">登录失败！</string>
    <string name="login_error">网络连接错误！</string>
    <string name="login_time_out">连接超时！</string>
    <string name="login_loading">正在登录&#8230;</string>
    <string name="menu_setting">设置</string>
    <string name="menu_about">关于</string>
    <string name="setting_title">关于</string>
    <string name="setting_server_ip">服务器IP:</string>
    <string name="setting_server_port">服务器端口:</string>
    <string name="setting_dialog_title">服务配置</string>
    <string name="setting_dialog_msg_ip">请在下面的输入框中输入服务器IP地址：</string>
    <string name="setting_dialog_msg_port">请在下面的输入框中输入服务器端口号：</string>
    <string name="setting_dialog_input_hint_server_ip">IP</string>
    <string name="setting_dialog_input_hint_server_port">端口</string>
    <string name="setting_dialog_sure">确定</string>
    <string name="setting_dialog_cancel">取消</string>
    <string name="slide_left_menu_user_name">用户姓名</string>
    <string name="slide_left_menu_role_name">用户角色</string>
    <string name="slide_left_menu_pim">个人信息管理</string>
    <string name="slide_left_menu_home">首页</string>
    <string name="slide_left_menu_submit">我提交的Bug</string>
    <string name="slide_left_menu_assign">指派给我的Bug</string>
    <string name="slide_left_menu_opt">操作过的Bug</string>
    <string name="slide_left_menu_project_module">项目与模块</string>
    <string name="slide_left_menu_charts">缺陷报表</string>
    <string name="slide_left_menu_setting">设置</string>
    <string name="slide_left_menu_about">关于</string>
    <string name="slide_left_menu_exit">退出登录</string>
    <string name="about_title">关于</string>
    <string name="about_version_name_pre">版本名：</string>
    <string name="about_version_code_pre">版本号：</string>
    <string name="about_graduation">基于Web和Android客户端的软件缺陷管理系统</string>
    <string name="about_msg">福州大学 软件工程专业2班\n黄文忠  毕业设计</string>
    <string name="about_privaty">使用条款和隐私政策</string>
    <string name="about_owner">孤狼软件  版权所有</string>
    <string name="about_overright">Copyright 2014&#8211;2015 GuLang All Rights Reserved</string>
    <string name="home_title">缺陷概况</string>
    <string name="home_opt">...</string>
    <string name="home_submit">提交新缺陷</string>
    <string name="home_bug_item_total">总数:</string>
    <string name="home_bug_item_unsolved">未解决:</string>
    <string name="home_bug_item_active">激活:</string>
    <string name="home_bug_item_solved">已解决:</string>
    <string name="home_bug_item_closed">已关闭:</string>
    <string name="submit_bug_title">提交新BUG</string>
    <string name="submit_bug_add">添加</string>
    <string name="confirm_dialog_sure_btn">确认</string>
    <string name="confirm_dialog_cancel_btn">取消</string>
    <string name="pim_top_title">个人信息</string>
    <string name="pim_top_save">保存</string>
    <string name="pim_user_id">用户ID:</string>
    <string name="pim_user_name">账号:</string>
    <string name="pim_role_name">身份:</string>
    <string name="pim_email">邮箱:</string>
    <string name="pim_creator">创建者:</string>
    <string name="pim_create_time">创建时间:</string>
    <string name="pim_password">修改密码:</string>
    <string name="pim_join_group">所在分组:</string>
    <string name="pim_join_project_module">参与:</string>
    <string name="pim_modify_pwd_dialog_title">修改密码</string>
    <string name="pim_modify_pwd_dialog_old">原密码</string>
    <string name="pim_modify_pwd_dialog_new">新密码</string>
    <string name="pim_modify_pwd_dialog_repeat">重复密码</string>
    <string name="pim_modify_email_dialog_title">设置邮箱</string>
    <string name="pim_modify_email_dialog_msg">请在下面的输入框中输入新的邮箱地址:</string>
    <string name="pim_modify_email_dialog_hint">新邮箱</string>
    <string name="pim_modify_email_dialog_not_email">邮箱格式不合法</string>
    <string name="pim_modify_pwd_dialog_not_old">原密码必须输入</string>
    <string name="pim_modify_pwd_dialog_wrong_old">原密码错误</string>
    <string name="pim_modify_pwd_dialog_not_new">新密码不能为空</string>
    <string name="pim_modify_pwd_dialog_not_match">新密码和重复密码不相同</string>
    <string name="pim_connect_fetch_failure">获取数据失败</string>
    <string name="pim_connect_time_out">连接超时</string>
    <string name="pim_connect_error">网络连接错误</string>
    <string name="connect_error">网络连接错误！</string>
    <string name="connect_time_out">连接超时！</string>
    <string name="project_module_title">项目与模块信息</string>
    <string name="search_bug_title">缺陷查询条件</string>
    <string name="search_bug_btn">查询</string>
    <string name="search_bug_project">项目</string>
    <string name="search_bug_module">模块</string>
    <string name="search_bug_priority">优先级</string>
    <string name="search_bug_serious">影响程度</string>
    <string name="search_bug_assign">指派给</string>
    <string name="search_bug_submit">提交者</string>
    <string name="search_bug_status">当前状态</string>
    <string name="search_bug_key_word">关键字</string>
    <string name="bug_list_title">项目缺陷列表</string>
    <string name="bug_list_item_status">当前状态：</string>
    <string name="bug_list_item_submit">提交时间：</string>
    <string name="bug_detail_title">缺陷详细信息</string>
    <string name="bug_detail_opt">...</string>
    <string name="bug_detail_name">缺陷名称</string>
    <string name="bug_detail_project">项目</string>
    <string name="bug_detail_module">模块</string>
    <string name="bug_detail_status">状态</string>
    <string name="bug_detail_assign">指派给</string>
    <string name="bug_detail_priority">优先级</string>
    <string name="bug_detail_serious">影响程度</string>
    <string name="bug_detail_creator">提交者</string>
    <string name="bug_detail_create_time">提交日期</string>
    <string name="bug_detail_active">激活次数</string>
    <string name="bug_detail_close_time">关闭日期</string>
    <string name="bug_detail_image">缺陷截图</string>
    <string name="bug_detail_introduce">注释</string>
    <string name="bug_detail_introduce_click"><u>点击此处查看</u></string>
    <string name="bug_detail_attachment">附件</string>
    <string name="bug_detail_opt_solve">解决</string>
    <string name="bug_detail_opt_modify">修改</string>
    <string name="bug_detail_opt_active">激活</string>
    <string name="bug_detail_opt_close">关闭</string>
    <string name="bug_detail_opt_delete">删除</string>
    <string name="bug_introduce_title">缺陷注释</string>
    <string name="my_submit_title">我提交的Bug</string>
    <string name="my_assign_title">指派给我的Bug</string>
    <string name="my_opt_title">我操作过的Bug</string>
    <string name="user_list_title">用户管理</string>
    <string name="user_list_add">添加</string>
    <string name="user_list_item_delete">删除</string>
    <string name="group_list_title">团队管理</string>
    <string name="group_list_item_delete">删除</string>
    <string name="project_list_title">项目管理</string>
    <string name="project_list_item_module">模块</string>
    <string name="project_list_item_delete">删除</string>
    <string name="add_user_title">添加用户</string>
    <string name="add_user_save">保存</string>
    <string name="modify_user_title">修改用户信息</string>
    <string name="modify_user_opt">修改</string>
    <string name="user_name">用户名称</string>
    <string name="user_role">用户角色</string>
    <string name="user_email">邮箱</string>
    <string name="user_creator">创建者</string>
    <string name="user_create_time">创建时间</string>
    <string name="reset_title">密码重置</string>
    <string name="reset_opt">重置</string>
    <string name="reset_user_name">请输入用户名</string>
    <string name="reset_message_title">请注意：</string>
    <string name="reset_message_content">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;当您点击重置密码后，所指定的用户绑定的邮箱会收到系统发送的重置密码的邮件，请在24小时内进入绑定邮箱点击邮件内的链接进行密码重置，否则此次重置无效！</string>
    <string name="group_name">团队名称</string>
    <string name="group_member">团队成员</string>
    <string name="group_introduce">团队简介</string>
    <string name="group_member_click"><u>点击选择</u></string>
    <string name="group_creator">创建者</string>
    <string name="group_create_time">创建时间</string>
    <string name="add_group_title">添加团队</string>
    <string name="add_group_save">保存</string>
    <string name="select_group_member_sure">确定</string>
    <string name="select_group_member_cancel">取消</string>
    <string name="group_modify_title">修改团队信息</string>
    <string name="group_modify_save">保存</string>
    <string name="group_modify_member"><u>点击选择</u></string>
    <string name="project_name">项目名称</string>
    <string name="project_group">负责团队</string>
    <string name="project_introduce">项目简介</string>
    <string name="project_creator">创建者</string>
    <string name="project_create_time">创建时间</string>
    <string name="project_add_title">添加项目</string>
    <string name="project_add_save">保存</string>
    <string name="project_modify_title">修改项目信息</string>
    <string name="project_modify_save">保存</string>
    <string name="module_list_title">项目模块详情</string>
    <string name="module_list_top_save">添加</string>
    <string name="module_list_item_delete">删除</string>
    <string name="module_name">模块名称</string>
    <string name="module_project_name">项目名称</string>
    <string name="module_fzr">负责人</string>
    <string name="module_introduce">模块简介</string>
    <string name="module_fzr_click"><u>点击选择</u></string>
    <string name="module_creator">创建者</string>
    <string name="module_create_time">创建时间</string>
    <string name="module_add_title">添加项目模块</string>
    <string name="module_add_top_save">保存</string>
    <string name="module_modify_title">修改项目模块</string>
    <string name="module_modify_top_save">保存</string>
    <string name="bug_solve_type">类型</string>
    <string name="bug_solve_solve">解决</string>
    <string name="bug_solve_other">其它</string>
    <string name="bug_solve_reason">解决注释</string>
    <string name="bug_solve_sure">解决</string>
    <string name="bug_solve_cancel">取消</string>
    <string name="bug_active_reason">激活原因</string>
    <string name="bug_active_sure">激活</string>
    <string name="bug_active_cancel">取消</string>
    <string name="bug_close_reason">关闭原因</string>
    <string name="bug_close_sure">关闭</string>
    <string name="bug_close_cancel">取消</string>
    <string name="bug_delete_message">删除后将不能够恢复，确定删除？</string>
    <string name="bug_delete_sure">删除</string>
    <string name="bug_delete_cancel">取消</string>
    <string name="charts_search_title">报表查询条件</string>
    <string name="charts_search_top_btn">查询</string>
    <string name="charts_search_project">项目名称</string>
    <string name="charts_search_start_date">开始日期</string>
    <string name="charts_search_end_date">结束日期</string>
    <string name="charts_search_date_format">日期格式如20150523</string>
    <string name="charts_show_title">缺陷报表</string>
    <string name="charts_show_day_submit_title">缺陷提交日期分布表（天）</string>
    <string name="charts_show_month_submit_title">缺陷提交日期分布表（月）</string>
    <string name="charts_show_day_total_title">缺陷总量走势图（天）</string>
    <string name="charts_show_month_total_title">缺陷总量走势图（月）</string>
    <string name="charts_show_module_title">各模块缺陷数饼图</string>
    <string name="charts_show_priority_title">缺陷优先级饼图</string>
    <string name="charts_show_status_title">缺陷状态饼图</string>
    <string name="bug_edit_name">缺陷名称</string>
    <string name="bug_edit_project">项目名称</string>
    <string name="bug_edit_module">模块名称</string>
    <string name="bug_edit_assign">指派给</string>
    <string name="bug_edit_priority">优先级</string>
    <string name="bug_edit_priority_low">低</string>
    <string name="bug_edit_priority_middle">中</string>
    <string name="bug_edit_priority_high">高</string>
    <string name="bug_edit_priority_urgency">紧急</string>
    <string name="bug_edit_serious">影响程度</string>
    <string name="bug_edit_image">缺陷截图</string>
</resources>