<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout style="@style/TopOptTheme">

        <ImageView
            android:id="@+id/reset_back_imgv"
            style="@style/TopOptBackTheme" />

        <TextView
            style="@style/TopOptTitleTheme"
            android:text="@string/reset_title" />

        <Button
            android:text="@string/reset_opt"
            style="@style/TopOptBtnTheme" />
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/reset_user_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:textSize="15dp"
        android:textColor="#ff5d5d5d"
        android:textStyle="bold"
        android:text="@string/reset_message_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="15dp"
        android:textColor="#ff5d5d5d"
        android:text="@string/reset_message_content" />

</LinearLayout>