<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent">

    <RelativeLayout style="@style/TopOptTheme">

        <ImageView
            android:id="@+id/charts_search_back_imgv"
            style="@style/TopOptBackTheme" />

        <TextView
            style="@style/TopOptTitleTheme"
            android:text="@string/charts_search_title" />

        <Button
            android:id="@+id/charts_search_top_btn"
            android:text="@string/charts_search_top_btn"
            android:visibility="invisible"
            style="@style/TopOptBtnTheme" />

    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        style="@style/OptItemRow">

        <TextView
            android:text="@string/charts_search_project"
            style="@style/OptItemTitle" />

        <Spinner
            android:id="@+id/charts_search_project_sp"
            android:background="@drawable/bg_spinner_selector"
            style="@style/OptItemContent" />
    </LinearLayout>

    <LinearLayout style="@style/OptItemRow">

        <TextView
            android:text="@string/charts_search_start_date"
            style="@style/OptItemTitle" />

        <EditText
            android:id="@+id/charts_search_start_date_et"
            android:hint="@string/charts_search_date_format"
            android:inputType="date"
            android:background="@drawable/bg_edit_text_selector"
            style="@style/OptItemContent" />
    </LinearLayout>

    <LinearLayout style="@style/OptItemRow">

        <TextView
            android:text="@string/charts_search_end_date"
            style="@style/OptItemTitle" />

        <EditText
            android:id="@+id/charts_search_end_date_et"
            android:hint="@string/charts_search_date_format"
            android:inputType="date"
            android:background="@drawable/bg_edit_text_selector"
            style="@style/OptItemContent" />
    </LinearLayout>

</LinearLayout>