<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout style="@style/TopOptTheme">

        <ImageView
            android:id="@+id/modify_user_back_imgv"
            style="@style/TopOptBackTheme" />

        <TextView
            android:text="@string/modify_user_title"
            style="@style/TopOptTitleTheme" />

        <Button
            android:id="@+id/modify_user_modify_btn"
            android:text="@string/modify_user_opt"
            style="@style/TopOptBtnTheme" />

    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        style="@style/OptItemRow"
        android:orientation="horizontal">

        <TextView
            android:text="@string/user_name"
            style="@style/OptItemTitle" />

        <EditText
            android:id="@+id/modify_user_name_et"
            android:background="@drawable/bg_edit_text_selector"
            style="@style/OptItemContent" />
    </LinearLayout>

    <LinearLayout
        style="@style/OptItemRow"
        android:orientation="horizontal">

        <TextView
            android:text="@string/user_role"
            style="@style/OptItemTitle" />

        <Spinner
            android:id="@+id/modify_user_role_sp"
            android:entries="@array/UserRole"
            android:background="@drawable/bg_spinner_selector"
            style="@style/OptItemContent" />
    </LinearLayout>

    <LinearLayout
        style="@style/OptItemRow"
        android:orientation="horizontal">

        <TextView
            android:text="@string/user_email"
            style="@style/OptItemTitle" />

        <EditText
            android:id="@+id/modify_user_email_et"
            android:inputType="textEmailAddress"
            android:background="@drawable/bg_edit_text_selector"
            style="@style/OptItemContent" />
    </LinearLayout>

    <LinearLayout
        style="@style/OptItemRow"
        android:orientation="horizontal">

        <TextView
            android:text="@string/user_creator"
            style="@style/OptItemTitle" />

        <TextView
            android:id="@+id/modify_user_creator_tv"
            style="@style/OptItemContent" />
    </LinearLayout>

    <LinearLayout
        style="@style/OptItemRow"
        android:orientation="horizontal">

        <TextView
            android:text="@string/user_create_time"
            style="@style/OptItemTitle" />

        <TextView
            android:id="@+id/modify_user_create_time_tv"
            style="@style/OptItemContent" />
    </LinearLayout>


</LinearLayout>